# RDGS_JULES_v0

./: .coverage  .env.example  .gitignore  .pre-commit-config.yaml  README.md  database_schema.sql  pyproject.toml  replit.nix
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 31868b6b664b_create_initial_schema_from_models.py  3901b04c2d11_initial_schema_from_02_data_model_manual.py  9c8129574423_create_export_audits_table.py  __init__.py  b233c9a2807b_create_initial_schema_from_ddl.py  cf523595d556_create_initial_tables_from_models.py  d9a510162558_initial_schema_for_client_role_data_.py
backend/: __init__.py  dependencies.py  main.py  models.py  pipeline.py  schemas.py  settings.py
backend/api/: notion_router.py
backend/services/: export.py  ingest.py  notion.py
backend/tests/api/: test_clients_api.py  test_export_api.py  test_ingest_api.py  test_notion_api.py  test_roles_api.py
backend/tests/pipeline/: test_extract.py  test_parse.py  test_sync.py
backend/tests/services/: test_export_service.py
backend/tests/unit/: test_models.py
backend/tests/utils/: test_date_parsing.py
docs/: 00_VISION-GLOSSARY.md  01_ARCHITECTURE-WORKFLOW.md  02_DATA-MODEL.md  03_FUNCTIONAL-SPEC_UI.md  04_BUILD-PLAN_DEVOPS.md
frontend/: package.json  playwright.config.ts  vite.config.ts
frontend/e2e/: happy-path.spec.ts
frontend/src/: App.tsx  index.css  main.tsx  types.ts
frontend/src/components/: RoleEditor.tsx
frontend/src/pages/: ClientDetailPage.tsx  ClientListPage.tsx
