[tool.poetry]
name = "dataset-distiller"
version = "0.1.0"
description = "A fast, fail-loud pipeline that converts messy client archives into golden JSONL rows for GPT-4 fine-tuning."
authors = ["Dataset Distiller Agent <agent@example.com>"] # Placeholder
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.11" # Reverted to allow Python 3.12
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
sqlmodel = "^0.0.18"
langgraph = "^0.0.48"
openai = "^1.23.6"
# unstructured = {extras = ["local-inference"], version = "^0.13.6"} # Modified: local-inference removed due to space issues
unstructured = ">=0.14.0" # Attempting newer version for Python 3.12 compatibility
python-dotenv = "^1.0.1"
psycopg = {extras = ["binary"], version = "^3.1.18"}
pydantic-settings = "^2.2.1"
alembic = "^1.13.1"
langsmith = "^0.1.52"
tiktoken = "^0.7.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.9"
mailersend = "^0.6.0"
pypdf = "^5.6.0"
python-docx = "^1.1.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.1"
black = "^24.4.0"
pytest = "^8.1.1"
pytest-asyncio = "^0.23.6"
mypy = "^1.9.0"
pytest-cov = "^5.0.0"
pytest-benchmark = "^4.0.0"
pre-commit = "^3.7.0"
httpx = "^0.27.0" # For API testing

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PL", "T20"]
ignore = ["E501"] # Handled by black

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict = true
exclude = ["frontend/"] # Exclude frontend from mypy checks for now

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
